--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.12"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "@rainbow-me/rainbowkit": "^2.1.4",
+    "viem": "2.17.0",
+    "wagmi": "^2.12.0",
+    "@tanstack/react-query": "^5.51.11"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.3.0",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -26,6 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^5.4.1"
   }
 }
